--- a/index.html
+++ b/index.html
@@ -30,4 +30,17 @@
       </nav>
     </header>
 
-    
+    <div class="main">
+        <!-- Hero Part -->
+        <div class="content">
+          <section id="hero" class="content-block">
+            <!-- Add your picture or slider here -->
+            <video
+              src="resources/pexels-kampus-production-6111110 (2160p).mp4"
+              alt="Healing and Wellness Video"
+              loop
+              autoplay
+              muted
+            ></video>
+
+            
