--- a/index.html
+++ b/index.html
@@ -1,46 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Sofia+Pro:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Calibri:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Sofia+Pro:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Calibri:wght@400;700&display=swap" rel="stylesheet" />
     <title>Ascent Physiotherapy</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Header -->
     <header>
-      <div class="logo">Ascent Physiotherapy</div>
-      <!-- Add logo later -->
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="sevices.html">Services</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+        <div class="logo"></div>
+        <img src="Images/Ascent Logo new.png" alt="" class="src">
+        
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sevices.html">Services</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class="main">
         <!-- Hero Part -->
         <div class="content">
-          <section id="hero" class="content-block">
-            <!-- Add your picture or slider here -->
-            <video
-              src="resources/pexels-kampus-production-6111110 (2160p).mp4"
-              alt="Healing and Wellness Video"
-              loop
-              autoplay
-              muted
-            ></video>
+            <section id="hero" class="content-block">
+                <!-- Add your picture or slider here -->
+                <video src="resources/pexels-kampus-production-6111110 (2160p).mp4" alt="Healing and Wellness Video"
+                    loop autoplay muted>
 
-            
+                </video>
+
+                <h1>Experience Healing and Wellness</h1>
+
+                <p>
+                    Ascent Physiotherapy is a full-service physiotherapy clinic located
+                    in Comox, BC. We offer Physiotherapy, including Manual/Manipulative
+                    Therapy, IMS, Acupuncture, Radial Shockwave Therapy, and exercise
+                    prescription including Personal Training to the residents of the
+                    Comox Valley and surrounding area.
+                </p>
+
+                <button class="cta-button">
+                    <a href="contact.html">Contact Us</a>
+                </button>
+            </section>
+        </div>
+
+        <div class="about">
+            <!-- About Us Section -->
+            <iframe width="100%" height="450" frameborder="0" style="border: 0"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83327.56084749056!2d-123.20647597656293!3d49.2577060282408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548673f54e6bc621%3A0xb4b7ef4d0fe7a488!2sQueen%20Elizabeth%20Park!5e0!3m2!1sen!2sca!4v1701047905672!5m2!1sen!2sca"
+                allowfullscreen>
+            </iframe>
+
+
+            <section id="about" class="content-block">
+                <h2>About Us</h2>
+                <p>
+                    A brief summary of Ascent Physiotherapy and our commitment to your
+                    well-being.
+                </p>
+                <p>
+                    Explore more about our team
+                    <a href="team.html">here</a>.<!-- Add team link later -->
+                </p>
+            </section>
+        </div>
+    </div>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2023 Ascent Physiotherapy</p>
+
+        <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.” </p>
+    </footer>
+</body>
+
+</html>
