footer disclaimer added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header>
         <div class="logo"></div>
-        <img src="Images/Ascent Logo new.png" alt="" class="src">
+        <img src="Images/Ascent Logo new.png" alt=""width="200" class="src">
         
         <nav>
             <ul>
@@ -30,7 +30,7 @@
         <!-- Hero Part -->
         <div class="content">
             <section id="hero" class="content-block">
-                <!-- Add your picture or slider here -->
+                <!-- <img src="Images/raspopova-marina-O29FNlHuKk8-unsplash.jpg" alt=""class="src"> -->
                 <video src="resources/pexels-kampus-production-6111110 (2160p).mp4" alt="Healing and Wellness Video"
                     loop autoplay muted>
 
@@ -73,6 +73,7 @@
             </section>
         </div>
     </div>
+
     <!-- Footer -->
     <footer>
         <p>&copy; 2023 Ascent Physiotherapy</p>
