--- a/contactus.html
+++ b/contactus.html
@@ -23,5 +23,38 @@
         </nav>
     </header>
 
+     <!-- Contact Us Section -->
+     <section id="contact" class="content-block">
+        <h2>Contact Us</h2>
+
+        <!-- Contact Details -->
+        <div class="contact-details">
+            <p><strong>Phone:</strong> [Your Phone Number]</p>
+            <p><strong>Email:</strong> <a href="mailto:your@email.com">[Your Email Address]</a></p>
+            <p><strong>Address:</strong> [Your Physical Address]</p>
+        </div>
+
+        <!-- Contact Form -->
+        <form action="#" method="post" class="contact-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+
+            <button type="submit">Send Message</button>
+        </form>
+
+        <!-- Call to Action -->
+        <div class="cta">
+            <h3>Ready to Feel Better?</h3>
+            <p>Schedule an appointment with our experienced team.</p>
+            <button class="cta-button"><a href="team.html">Meet Our Team</a></button>
+        </div>
+    </section>
+
 </body>
 </html>
