--- a/contactus.html
+++ b/contactus.html
@@ -55,6 +55,10 @@
             <button class="cta-button"><a href="team.html">Meet Our Team</a></button>
         </div>
     </section>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2023 Ascent Physiotherapy</p>
+    </footer>
 
 </body>
 </html>
