--- a/services.html
+++ b/services.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <header>
+        <h1>Services</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sevices.html">Services</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    
+    <footer>
+        <p>&copy; 2023 Ascent Physiotherapy</p>
+    </footer>
     
 </body>
 </html>
