--- a/services.html
+++ b/services.html
@@ -16,13 +16,36 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sevices.html">Services</a></li>
-                <li><a href="team.html">Team</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                
+                <li><a href="contactus.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    
+    <main>
+        <section id="services" class="content-block">
+            <h2>Our Services</h2>
+            <img src="resources/national-cancer-institute-LxPrHCm8-TI-unsplash.jpg" alt="Service">
+            <p>Discover the comprehensive range of services offered by Ascent Physiotherapy to support your journey to optimal health and well-being.</p>
+
+            <h3>Manual/Manipulative Therapy</h3>
+            <p>Our expert therapists employ manual and manipulative techniques to address musculoskeletal issues and enhance your physical function.</p>
+
+            <h3>IMS (Intramuscular Stimulation)</h3>
+            <p>Experience relief from chronic pain and muscle tightness through the effective and specialized approach of Intramuscular Stimulation.</p>
+
+            <h3>Acupuncture</h3>
+            <p>Explore the benefits of acupuncture, an ancient practice that promotes natural healing and alleviates pain by stimulating specific points on the body.</p>
+
+            <h3>Radial Shockwave Therapy</h3>
+            <p>Accelerate your recovery with Radial Shockwave Therapy, a non-invasive technique that stimulates healing and improves tissue regeneration.</p>
+
+            <h3>Exercise Prescription and Personal Training</h3>
+            <p>Customized exercise programs and personal training sessions tailored to your needs, promoting strength, flexibility, and overall well-being.</p>
+        </section>
+    </main>
+
+
     <footer>
         <p>&copy; 2023 Ascent Physiotherapy</p>
     </footer>
