--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="sevices.html">Services</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contactus.html">Contact</a></li>
             </ul>
         </nav>
     </header>
