--- a/contactus.html
+++ b/contactus.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="sevices.html">Services</a></li>
+                <li><a href="services.html">Services</a></li>
                
                 <li><a href="contactus.html">Contact</a></li>
             </ul>
