--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Calibri:wght@400;700&display=swap" rel="stylesheet" />
     <title>Ascent Physiotherapy</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -17,7 +18,8 @@
         <img src="Images/Ascent Logo new.png" alt=""width="200" class="src">
         
         <nav>
-            <ul>
+            <a class="toggle" onclick="showNav()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+            <ul id="nav-items">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="team.html">Team</a></li>
@@ -31,7 +33,7 @@
         <div class="content">
             <section id="hero" class="content-block">
                 <!-- <img src="Images/raspopova-marina-O29FNlHuKk8-unsplash.jpg" alt=""class="src"> -->
-                <video src="resources/pexels-kampus-production-6111110 (2160p).mp4" alt="Healing and Wellness Video"
+                <video src="videos/pexels-kampus-production-6111110 (2160p).mp4" alt="Healing and Wellness Video"
                     loop autoplay muted>
 
                 </video>
@@ -80,6 +82,12 @@
 
         <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.” </p>
     </footer>
+    <script>
+        function showNav() {
+            var element = document.getElementById("nav-items");
+            element.classList.toggle("show-items");
+        }
+    </script>
 </body>
 
 </html>
