--- a/contactus.html
+++ b/contactus.html
@@ -12,7 +12,7 @@
 <body>
      <!-- Header -->
      <header>
-        <h1>Contact Us</h1>
+        <!-- <h1>Contact Us</h1> -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -59,6 +59,12 @@
     <footer>
         <p>&copy; 2023 Ascent Physiotherapy</p>
     </footer>
+    <script>
+        function showNav() {
+            var element = document.getElementById("nav-items");
+            element.classList.toggle("show-items");
+        }
+    </script>
 
 </body>
 </html>
