--- a/contactus.html
+++ b/contactus.html
@@ -55,9 +55,16 @@
             <button class="cta-button"><a href="team.html">Meet Our Team</a></button>
         </div>
     </section>
+
+    <iframe width="100%" height="450" frameborder="0" style="border: 0"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83327.56084749056!2d-123.20647597656293!3d49.2577060282408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548673f54e6bc621%3A0xb4b7ef4d0fe7a488!2sQueen%20Elizabeth%20Park!5e0!3m2!1sen!2sca!4v1701047905672!5m2!1sen!2sca"
+    allowfullscreen>
+</iframe>
+
     <!-- Footer -->
     <footer>
         <p>&copy; 2023 Ascent Physiotherapy</p>
+        <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.” </p>
     </footer>
     <script>
         function showNav() {
