--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <header>
         <div class="logo"></div>
-        <img src="Images/Ascent Logo new.png" alt=""width="85" class="src">
+        <img src="Images/Ascent Logo white.png" alt=""width="25%" class="src">
         
         <nav>
             <a class="toggle" onclick="showNav()"><i class="fa fa-bars" aria-hidden="true"></i></a>
@@ -58,7 +58,7 @@
             <!-- About Us Section -->
 
             <section id="about" class="content-block">
-                <h2>About Us</h2>
+                <h2>ABOUT US</h2>
                 <p>
                     Welcome to Ascent Physiotherapy, your trusted partner on the journey to health and wellness. At Ascent, we believe in the transformative power of physiotherapy to enhance your well-being and bring you back to life's activities with strength and confidence. Step into a place where your health is our priority, and your journey to recovery is guided by experienced and caring professionals.
                 </p>
