Styles done for Contact page

--- a/contactus.html
+++ b/contactus.html
@@ -30,7 +30,7 @@
 
      <!-- Contact Us Section -->
      <section id="contact" class="content-block">
-        <h2>Contact Us</h2>
+        <h2>CONTACT US</h2>
 
         <!-- Contact Details -->
         <div class="contact-details">
