--- a/contactus.html
+++ b/contactus.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contactus</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Pro:wght@400;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Calibri:wght@400;700&display=swap" rel="stylesheet" />
     <title>Ascent Physiotherapy</title>
+    <!-- DGL 103 CVS2 - NeethuUnnikrishnan - Project -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
 
- <!-- Header -->
- <header>
-    <div class="logo"></div>
-    <img src="Images/Ascent Logo white.png" alt=""width="25%" class="src">
-    
-    <nav>
-        <a class="toggle" onclick="showNav()"><i class="fa fa-bars" aria-hidden="true"></i></a>
-        <ul id="nav-items">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            
-            <li><a href="contactus.html">Contact</a></li>
-        </ul>
-    </nav>
-</header>
+    <!-- Header -->
+    <header>
+        <div class="logo"></div>
+        <img src="Images/Ascent Logo white.png" alt="" width="15%" class="src">
+
+        <nav>
+            <a class="toggle" onclick="showNav()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+            <ul id="nav-items">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+
+                <li><a href="contactus.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
-     <!-- Contact Us Section -->
-     <section id="contact" class="content-block">
+    <!-- Contact Us Section -->
+    <section id="contact" class="content-block">
+
+
         <h2>CONTACT US</h2>
 
-        <!-- Contact Details -->
-        <div class="contact-details">
-            <p><strong>Phone:</strong> [Your Phone Number]</p>
-            <p><strong>Email:</strong> <a href="mailto:your@email.com">[Your Email Address]</a></p>
-            <p><strong>Address:</strong> [Your Physical Address]</p>
-        </div>
+
+        <img src="Images/Contact U.jpg" alt="" width="100%" class="sr">
+
 
         <!-- Contact Form -->
         <form action="#" method="post" class="contact-form">
@@ -59,18 +61,32 @@
             <p>Schedule an appointment with our experienced team.</p>
             <button class="cta-button"><a href="team.html">Meet Our Team</a></button>
         </div>
+
+        <!-- Contact Details -->
+        <div class="contact-details">
+            <p><strong>Phone:</strong> Phone: 250-339-1039 <br>
+                Fax: 250 890-0032</p>
+            <p><strong>Email:</strong> <a href="mailto:your@email.com">admin@ascentphysiotherapy.com</a></p>
+            <p><strong>Address:</strong> 141A Nordin Street Comox, BC, Canada V9M 3N5</p>
+        </div>
+
+
+
+
     </section>
 
     <iframe width="100%" height="450" frameborder="0" style="border: 0"
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83327.56084749056!2d-123.20647597656293!3d49.2577060282408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548673f54e6bc621%3A0xb4b7ef4d0fe7a488!2sQueen%20Elizabeth%20Park!5e0!3m2!1sen!2sca!4v1701047905672!5m2!1sen!2sca"
-    allowfullscreen>
-</iframe>
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83327.56084749056!2d-123.20647597656293!3d49.2577060282408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548673f54e6bc621%3A0xb4b7ef4d0fe7a488!2sQueen%20Elizabeth%20Park!5e0!3m2!1sen!2sca!4v1701047905672!5m2!1sen!2sca"
+        allowfullscreen>
+    </iframe>
 
     <!-- Footer -->
     <footer>
         <h5>&copy; 2023 Ascent Physiotherapy</h5>
 
-        <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.” </p>
+        <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be
+            seen outside of the class environment. None of the content and images were approved by the business owner.”
+        </p>
     </footer>
     <script>
         function showNav() {
@@ -80,4 +96,5 @@
     </script>
 
 </body>
+
 </html>
